--- a/src/index.scss
+++ b/src/index.scss
@@ -112,6 +112,13 @@ body {
 			left: 80px;	
 			margin: 0 auto !important;
 		}
+		.link-login {
+			width: 120px;
+			bottom: -5px !important;
+			left: 80px;	
+			margin: 0 auto !important;
+
+		}
 	}	
 	.list-unstyled {
 		justify-content: center;
@@ -134,6 +141,10 @@ body {
 
 @media (min-width: 281px) and (max-width: 415px) {
 	.grettings {		
+		top: 215px;
+	}
+
+	.link-login {
 		top: 215px;
 	}
 }
