--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -25,8 +25,6 @@
 .drawer {
 	position: fixed;
 	width: 385px;
-	min-height: 50vw;
-	max-height: 100vw;
 	right: 0;
 	padding: 30px;
 	background: #ffffff;
@@ -112,4 +110,11 @@
 			font-size: 20px;
 		}
 	}
+}
+
+@media (max-width: 281px) {
+	.drawer {
+		width: 100%;
+	}
+
 }
