--- a/src/index.scss
+++ b/src/index.scss
@@ -57,7 +57,6 @@ body {
 		.selectBlock {
 			border-radius: 5px;
 			font-weight: 500;
-
 		}		
 	}
 
@@ -78,10 +77,7 @@ body {
 	}	
 	.removeBtn {
 		width: 30px;
-		background-color: white;		
-		//border-color: #f1ebeb;		
-		//border-radius: 7px;
-		//border-style: solid;
+		background-color: white;
 		border: none;
 		cursor: pointer;
 		opacity: .7;
@@ -117,7 +113,6 @@ body {
 			bottom: -5px !important;
 			left: 80px;	
 			margin: 0 auto !important;
-
 		}
 	}	
 	.list-unstyled {
@@ -140,7 +135,8 @@ body {
 }
 
 @media (min-width: 281px) and (max-width: 415px) {
-	.grettings {		
+	.grettings {
+		display: flex !important;		
 		top: 215px;
 	}
 
@@ -153,4 +149,14 @@ body {
 	.headerLeft {
 		display: block !important;
 	}
+
+	.grettings {
+		display: flex !important;		
+		top: 315px;
+	}
+
+	.imgCart {
+		display: none;
+	}
+
 }
